--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
                 <fieldset class="quadro">
                     <legend><b>Fórmulário de Clientes</b></legend>
                     <br>
-                    <input type="text" name="login" id="login" class="inputUser" required>
+                    <input type="text" name="login" id="login" class="inputUser">
                     <label for="login" class="labelInput">Login</label>
                     <br><br>
                     <input type="text" name="nome" id="nome" class="inputUser">
@@ -42,48 +42,48 @@
                     <input type="text" name="hostnameIp" id="hostnameIp" class="inputUser">
                     <label for="hostnameIp" class="labelInput">Hostname/IP:</label>
                     <br><br>
-                    <input type="text" name="FilialMediador" id="FilialMediador" class="inputUser" required>
+                    <input type="text" name="FilialMediador" id="FilialMediador" class="inputUser">
                     <label for="FilialMediador" class="labelInput">Filial/Mediador</label>
                     <br><br>
-                    <input type="text" name="apolice" id="apolice" class="inputUser" required>
+                    <input type="text" name="apolice" id="apolice" class="inputUser">
                     <label for="apolice" class="labelInput">Apólice/cotação</label>
                     <br><br>
                     <fieldset class="quadro">
                         <legend><b>Tipo de seguro</b></legend>
-                        <input type="radio" id="novo" name="tipo" value="novo" required>
+                        <input type="radio" id="novo" name="tipo" value="novo">
                         <label for="novo">Novo</label>
                         <br>
-                        <input type="radio" id="endosso" name="tipo" value="endosso" required>
+                        <input type="radio" id="endosso" name="tipo" value="endosso">
                         <label for="endosso">Endosso</label>
                         <br>
-                        <input type="radio" id="renovação" name="tipo" value="renovação" required>
+                        <input type="radio" id="renovação" name="tipo" value="renovação">
                         <label for="renovação">Renovação</label>
                         <br><br>
                         <fieldset class="quadro">
                             <legend><b>Seguro</b></legend>
-                            <input type="radio" id="allianz" name="modelo" value="Allianz" required>
+                            <input type="radio" id="allianz" name="modelo" value="Allianz">
                             <label for="allianz">Allianz</label>
                             <br>
-                            <input type="radio" id="congenere" name="modelo" value="Congenere" required>
+                            <input type="radio" id="congenere" name="modelo" value="Congenere">
                             <label for="congenere">Congênere</label>
                             <br>
                         </fieldset>
                         <br><br>
                         <fieldset class="quadro">
                             <legend><b>Tipo de cotação</b></legend>
-                            <input type="radio" id="auto" name="cotacao" value="auto" required>
+                            <input type="radio" id="auto" name="cotacao" value="auto">
                             <label for="auto">Auto</label>
                             <br>
-                            <input type="radio" id="massificado" name="cotacao" value="massificado" required>
+                            <input type="radio" id="massificado" name="cotacao" value="massificado">
                             <label for="massificado">Massificado</label>
                             <br>
-                            <input type="radio" id="grandesRiscos" name="cotacao" value="grandes riscos" required>
+                            <input type="radio" id="grandesRiscos" name="cotacao" value="grandes riscos">
                             <label for="grandesRiscos">Grandes Riscos</label>
                             <br>
-                            <input type="radio" id="agronegocios" name="cotacao" value="agronegocios" required>
+                            <input type="radio" id="agronegocios" name="cotacao" value="agronegocios">
                             <label for="agronegocios">Agronegócios</label>
                             <br>
-                            <input type="radio" id="benefícios" name="cotacao" value="Benefícios" required>
+                            <input type="radio" id="benefícios" name="cotacao" value="Benefícios">
                             <label for="benefícios">Benefícios</label>
                             <br>
                         </fieldset>
@@ -113,7 +113,7 @@
 
             <h3 class="titulo">Descrição:</h3>
             <div class="container">
-                <textarea class="descricao" name="descricao" id="" cols="30" rows="10"
+                <textarea class="descricao" name="descricao" id="descricao" cols="30" rows="10"
                     placeholder="Digite a descrição do problema aqui"></textarea>
             </div>
             <h3 class="titulo">Troubleshooting:</h3>
